--- a/package.json
+++ b/package.json
@@ -1,22 +1,46 @@
 {
   "name": "php-trim-plus",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "php string trim function in javascript.",
   "repository": "https://gitee.com/janpoem/php-trim-plus.git",
   "keywords": [
     "trim",
-    "string trim"
+    "ltrim",
+    "rtrim",
+    "string trim",
+    "isString",
+    "isSymbol",
+    "isEmptyString",
+    "toSafeString"
   ],
   "author": "Jan <janpoem@163.com>",
   "license": "MIT",
-  "main": "trim.js",
+  "main": "index.js",
   "files": [
-    "index.js"
+    "index.js",
+    "index.js.map",
+    "trim.js"
   ],
   "scripts": {
-    "test": "jest trim.test.js"
+    "build": "rollup -c",
+    "test": "jest"
+
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.m?jsx?$": "babel-7-jest"
+    }
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "babel-7-jest": "^21.3.3",
+    "jest": "^23.6.0",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
   }
 }
