--- a/package.json
+++ b/package.json
@@ -24,21 +24,24 @@
   "scripts": {
     "build": "rollup -c",
     "test": "jest"
-
   },
   "jest": {
     "transform": {
-      "^.+\\.m?jsx?$": "babel-7-jest"
+      "^.+\\.m?jsx?$": "babel-jest"
     }
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
-    "babel-7-jest": "^21.3.3",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "jest": "^23.6.0",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0"
+  },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0"
   },
   "dependencies": {
     "lodash": "^4.17.11"
