--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/plugin-transform-flow-strip-types": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
-    "@babel/preset-flow": "^7.12.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.15.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "rollup": "^2.34.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "dependencies": {
     "lodash": "^4.17.20"
