--- a/.workflow/npm-test.yml
+++ b/.workflow/npm-test.yml
@@ -1,9 +1,9 @@
 name: npm-test
 displayName: 'npm-test'
 triggers:                                 # 流水线触发器配置
-  push:                                   # 设置 master 分支 在产生代码 push 时精确触发（PRECISE）构建
-    - matchType: PRECISE
-      branch: master
+  push:
+    branches:
+      - master
 commitMessage: ''                         # 通过匹配当前提交的 CommitMessage 决定是否执行流水线
 stages:                                   # 构建阶段配置
   - stage:                                # 定义一个 ID 标识为 npm-build-stage ,名为 “npm Stage” 的阶段
